--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==3.0.3
-gunicorn==23.0.0
-gspread==6.1.4
-oauth2client==4.1.3
+Flask==2.2.5
+gunicorn==20.1.0
+gspread==5.12.0
+google-auth==2.33.0
