--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.2.5
-gunicorn==20.1.0
-gspread==5.12.0
-google-auth==2.33.0
-SQLAlchemy==2.0.32
-psycopg2-binary==2.9.9
-requests==2.32.3
+blinker==1.9.0
+click==8.2.1
+Flask==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+Werkzeug==3.1.3
