--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 Werkzeug==3.1.3
+gunicorn==20.1.0
+gspread==6.1.4
+google-auth==2.34.0
+requests==2.32.3
